--- a/BSModManager/Views/UpdateTab.xaml
+++ b/BSModManager/Views/UpdateTab.xaml
@@ -4,7 +4,7 @@
              xmlns:prism="http://prismlibrary.com/"             
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
-        <DataGrid ItemsSource="{Binding ModsData}" AutoGenerateColumns="False" CanUserAddRows="False">
+        <DataGrid ItemsSource="{Binding LocalModsContainer}" AutoGenerateColumns="False" CanUserAddRows="False">
             <DataGrid.ColumnHeaderStyle>
                 <Style TargetType="DataGridColumnHeader">
                     <Setter Property="HorizontalContentAlignment" Value="Center"/>
