--- a/BSModManager/Views/UpdateTab.xaml
+++ b/BSModManager/Views/UpdateTab.xaml
@@ -12,9 +12,17 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="50"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="50"/>
             </Grid.ColumnDefinitions>
             <Label Content="🔍" Margin="0 0 0 5" HorizontalAlignment="Center" Grid.Column="0"></Label>
             <TextBox Text="{Binding SearchWords.Value, UpdateSourceTrigger=PropertyChanged}" Margin="0 0 0 5" TextAlignment="Left" VerticalContentAlignment="Center" Grid.Column="1"></TextBox>
+            <Button Content="Red" Margin="0 0 0 5" Background="Red" Command="{Binding ColorCommand}" CommandParameter="#FFFF0000" Grid.Column="2"></Button>
+            <Button Content="Orange" Margin="0 0 0 5" Background="Orange" Command="{Binding ColorCommand}" CommandParameter="#FFFFA500" Grid.Column="3"></Button>
+            <Button Content="Green" Margin="0 0 0 5" Background="Green" Command="{Binding ColorCommand}" CommandParameter="#FF008000" Grid.Column="4"></Button>
+            <Button Content="Blue" Margin="0 0 0 5" Background="Blue" Command="{Binding ColorCommand}" CommandParameter="#FF0000FF" Grid.Column="5"></Button>
         </Grid>
         <Grid Grid.Row="1">
             <DataGrid ItemsSource="{Binding LocalModsContainer}" AutoGenerateColumns="False" CanUserAddRows="False">
